# splatplanner

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml  splatplanner_cfg.rviz  splatplanner_ssh.rosinstall
include/map/: frontierevaluator.h  mapsearchspace.h  viewutility.h
include/planner/: constraint.h  nearestfrontierplanner.h  planner_base.h  plannerlogging.h  splatplanner.h  state_utils.h
include/poly_traj/: optimalsmalltraj.h  polytrajexecutor.h  polytrajinterface.h
include/trajectory/: dyntrajectory.h  kinodynamicastar.h  leecontrollertrajectory.h  polytrajinterface.h  quinticbezieropt.h  spline.h  trajectory.h  trajectoryompl.h  velocitytrajinterface.h
include/utils/: boundingvolume.h  motion_utils.h  nn_hashmap.hpp  nnfrontiers_utils.h  permutohedral.h
launch/: real_vizu_map.launch  rotors_sim_rpg_control.launch  rotors_sim_setup.launch  traj_test.launch  uav_mapper.launch  uav_mapper_cao.launch  uav_mapper_cao_teaser.launch  uav_mapper_powerplant.launch  vizu_map_avm713.launch  vizu_map_avm_facility1_launch.launch  vizu_map_avm_office1_launch.launch  vizu_map_cao_launch.launch  vizu_map_launch.launch  vizu_map_maze_launch.launch
launch/cfg/: camera.yaml  map_core_option.yaml  mav.yaml
launch/classic/: classic_facility_a.launch  classic_facility_b.launch  classic_facility_c.launch  classic_maze.launch  classic_office_b.launch  classic_office_c.launch
launch/gt_generation/: gt_avm710.launch  gt_avm854.launch  gt_avm_facility1.launch  gt_avm_office1.launch  gt_facility.launch  gt_maze.launch  gt_unity_office.launch
launch/nf/: nf_avm710.launch  nf_avm854.launch  nf_avm_facility1.launch  nf_avm_office1.launch  nf_facility.launch  nf_maze.launch  nf_unity_office.launch
launch/rapid/: rapid_facility_a.launch  rapid_maze.launch  rapid_office_b.launch
launch/rapid_frontier/: rapid_facility_b.launch  rapid_facility_c.launch  rapid_frontier_avm710.launch  rapid_frontier_avm854.launch  rapid_frontier_avm_facility1.launch  rapid_frontier_avm_office1.launch  rapid_frontier_facility.launch  rapid_frontier_maze.launch  rapid_frontier_unity_office.launch  rapid_office_c.launch
launch/setup/: quad_sim.launch
launch/splat_utils/: quad_sim_rpg.launch  rotors_rpg_sim.launch  splat_cam_map_tsdf_simple.launch  splatplanner_maze_simple.launch
launch/splatplanner/: splat_cam_map_tsdf.launch  splatplanner_avm710.launch  splatplanner_avm854.launch  splatplanner_avm_facility1.launch  splatplanner_avm_facility_teaser.launch  splatplanner_avm_office1.launch  splatplanner_facility.launch  splatplanner_facility_a.launch  splatplanner_facility_b.launch  splatplanner_facility_c.launch  splatplanner_maze.launch  splatplanner_maze_pres.launch  splatplanner_office_b.launch  splatplanner_office_c.launch  splatplanner_unity_office.launch
launch/utils_launch/: avm710_launch_soa.launch  avm713_launch_soa.launch  avm854_launch_soa.launch  avm_facility1_launch_soa.launch  avm_office1_launch_soa.launch  facility_launch_soa.launch  maze_launch_soa.launch  maze_launch_soa_icra.launch  pp_launch_soa.launch  pp_launch_soa_icra.launch  spooler_launch_soa.launch  stabilizer_launch_soa.launch  tsdf_mapping.launch  unity_office_launch_soa.launch
node/: nfplanner_node.cpp  splatplanner_node.cpp
rviz/: mapper.rviz
sim_helper/: rotors_rpg_sim_setup.py
src/map/: frontierevaluator.cpp  mapsearchspace.cpp  viewutility.cpp
src/planner/: constraint.cpp  (+4 more)
(+43 files in other folders)
