<?xml version="1.0"?>
<package format="2">
    <name>splatplanner</name>
    <version>0.0.0</version>
    <description>The splatplanner package</description>

    <maintainer email="anthony@todo.todo">anthony</maintainer>
  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>




<depend>roscpp</depend>

    <depend>mav_trajectory_generation</depend>
    <depend>mav_trajectory_generation_ros</depend>
    <depend>trajectory_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>rotors_control</depend>
    <depend>quadrotor_common</depend>
    <depend>quadrotor_msgs</depend>

    <depend>nlopt</depend>

    <depend>glog_catkin</depend>

    <depend>map_core</depend>





    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
